--- a/views/index.erb
+++ b/views/index.erb
@@ -18,26 +18,53 @@
 </table>
 
 <hr>
-
+<h3>Payments</h3>
 <table border=1>
   <tr>
+    <th>Repaid month number</th>
     <th>Title</th>
     <th>Balance</th>
     <th>Rate</th>
     <th>Payment</th>
     <th>Interest</th>
     <th>Extra payments</th>
-    <th>Repaid month number</th>
   </tr>
-  <% avaloans.sort_by {|a| [a[:rate], a[:title], a[:balance]] }.reverse.each do |loan| %>
+  <% payments[:payments].each do |loan| %>
+  <%# avaloans.sort_by {|a| [a[:rate], a[:title], a[:balance]] }.reverse.each do |loan| %>
     <tr>
+      <td><%= Chronic.parse("#{loan[:month_number]} months from now").to_time.strftime("%b %Y") %> (<%= loan[:month_number] %> months from now)</td>
       <td><%= loan[:title] %></td>
       <td><%= loan[:balance] %></td>
       <td><%= loan[:rate] %>%</td>
       <td><%= loan[:payment] %></td>
       <td><%= loan[:interest] %></td>
       <td><%= loan[:extra_payment] %></td>
-      <td><%= Chronic.parse("#{loan[:month_number]} months from now").to_time.strftime("%m/%Y") %> (<%= loan[:month_number] %> months from now)</td>
+    </tr>
+  <% end %>
+</table>
+
+<%= payments[:months_number] %>
+
+<hr>
+<h3>Sorted payments</h3>
+
+<table border=1>
+  <tr>
+    <th></th>
+    <% payments[:payments].map { |p| p[:title] }.uniq.each do |title| %>
+      <td>
+        <%= title %>
+      </td>
+    <% end %>
+  </tr>
+  <tr>
+    <th>Month</th>
+    <th>Extra payment</th>
+  </tr>
+  <% payments[:months_number].times do |month| %>
+    <% month_payments = payments[:payments].select { |p| p[:month_number] == month } %>
+    <tr>
+      <td><%= Chronic.parse("#{month} months from now").to_time.strftime("%b %Y") %></td>
     </tr>
   <% end %>
 </table>
