--- a/views/index.erb
+++ b/views/index.erb
@@ -48,11 +48,24 @@
 <table border=1>
   <tr>
     <th>Month</th>
-    <th>Extra payment</th>
-    <% loans.each do |loan| %>
+    <%# <th>Extra payment</th> %>
+    <% loans.sort_by { |d| d[:rate] }.reverse.each do |loan| %>
       <th><%= loan[:title] %></th>
     <% end %>
   </tr>
+  <% payments[:sorted_payments].each do |month| %>
+    <% month.each do |k, payments| %>
+      <tr>
+        <td><%= k %></td>
+        <% payments.each do |payment| %>
+          <td>
+            <%= payment[:balance] %>
+          </td>
+        <% end %>
+      </tr>
+    <% end %>
+  <% end %>
   <tr>
+
   </tr>
 </table>
